[package]
name = "rpncalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
clearscreen = "1.0.10"
clap = {version = "3.2.6", features = [ "derive" ] }
macros-organized = { path = "deps/macros-organized" }
