[package]
name = "rpncalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
clap = {version = "3.2.6", features = [ "derive" ] }
rpncalc-macros = { path = "deps/macros" }
clearscreen = { version = "1.0.10", optional = true }

[features]
build-binary = [ "clearscreen" ]

[[bin]]
name = "tui"
path = "src/bin/tui/main.rs"
required-features = [ "build-binary" ]
